<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.spaces.spaces.MainActivity"
    tools:showIn="@layout/app_bar">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/spaceList"
            android:layout_width="match_parent"
            android:layout_height="523dp"
            android:layout_marginTop="8dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </android.support.v7.widget.RecyclerView>


</android.support.constraint.ConstraintLayout>
